# tkoyama010

./: .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  auto_email.py  streamlit_app.py  tkoyama010.txt
.github/: dependabot.yml
.pyconjp2024/: pyvenv.cfg
ahc049/: main.py  pahcer_config.toml
akari-blog-posts/: README.md
circuitboardcooling/: .gitignore  GEOMETRY_INFO.md  README.md  pyproject.toml
circuitboardcooling/circuitboardcooling/: __init__.py  __main__.py
docs/: requirements.txt
musics/: kaeru-no-uta.py
opencae2020B02/: Makefile  PITCHME.md  PITCHME.yaml  definition_of_finite_elements_methods.py  definition_of_integration_methods.py  demo_tripod.py  mesh_generation.py
opencae2020B13/: Makefile  PITCHME.md  PITCHME.yaml  test_bunny.py  test_bunny_org.py  test_camera.py  test_camera_up.py  test_camera_zoom.py  test_clip_box.py  test_multi_renderers.py  test_shrink.py  test_vtk.py  test_widget_box.py
opencae20210403/: Makefile  PITCHME.md  conf.py  index.rst  test_camera.py  test_camera_up.py  test_camera_zoom.py  test_clip_box.py  test_extrude_rotate.py  test_multi_renderers.py  test_plot_over_circular_arc1.py  test_plot_over_circular_arc2.py  test_plot_over_line1.py  test_plot_over_line2.py  test_pyramid.py  test_pyvista.py  test_shrink.py  test_vtk.py
opencae2021B13/: conf.py  index.rst  tuning_fork.py
opencae2021M-03/: conf.py  index.rst
opencae2021M03/: conf.py  index.rst
pages/: 01_about_streamlit.md  01_about_streamlit.py
profile-summary-card-output/: README.md
pvgmsh-introduction/: index.rst
(+133 files in other folders)
