[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitboardcooling"
version = "0.1.0"
description = "OpenFOAM circuitBoardCooling tutorial with Docker and PyVista visualization"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Tetsuo Koyama"}
]
dependencies = [
    "docker>=6.0.0",
    "pyvista>=0.40.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
circuitboardcooling = "circuitboardcooling.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["circuitboardcooling*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
